--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="the homepage of badhri nadh's github profile repo."
     />
-    <link href="/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <title>Profile</title>
   </head>
 
