--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div id="language"></div>
         </header>
         <nav class="navMenu">
-          <a href="index.html">/home</a>
+          <a href="#">/home</a>
           <a href="https://www.badhrinadh.com" target="_blank">/work</a>
           <div class="dot"></div>
         </nav>
